bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type Bolean
var fini:Bolean; fini=false
         ^BDR:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var fini:Bolean; fini=false
    ^BDR:1: error: local variables must be initialized
var fini:Bolean; fini=false
    ^BDR:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini=false) {
           ^BDR:4: error: value update is not a member of Boolean
  if (estSurMessage()=false) {
      ^